Add fastpass; fix bugs; add inference model

--- a/experiments/vis.ipynb
+++ b/experiments/vis.ipynb
@@ -2,14 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import sys\n",
+    "import pickle\n",
+    "sys.path.insert(0, \"/home/qite/my/pytorch-pose/\")\n",
+    "from pose.datasets import Mpii"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
    ]
   },
   {
@@ -29,8 +57,6 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
-    "import pickle\n",
     "data = pickle.load(open(\"1-220.dat\"))\n",
     "\n",
     "losses = list()\n",
@@ -104,27 +130,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.insert(0, \"/home/qite/my/pytorch-pose/\")\n",
-    "from pose.datasets import Mpii\n",
-    "mpii = Mpii(jsonfile='/home/qite/my/pytorch-pose/data/mpii/mpii_annotations.json',\n",
-    "            img_folder='/home/qite/my/pytorch-pose/data/mpii/images',\n",
-    "            meanstd_file='/home/qite/my/pytorch-pose/data/mpii/mean.pth.tar',\n",
-    "            sigma=1, label_type=\"Gaussian\", train=False, label_data=Mpii.LABEL_MIX_MAP)\n",
-    "preds = np.load(\"/home/qite/my/pytorch-pose/checkpoint/mpii/hg_part_S3_B1/preds_200.npy\")"
+    "base_dir = '/home/qite/my/pytorch-pose'\n",
+    "mpii = Mpii(jsonfile=base_dir + '/data/mpii/mpii_annotations.json',\n",
+    "            img_folder=base_dir + '/data/mpii/images',\n",
+    "            meanstd_file=base_dir + '/data/mpii/mean.pth.tar',\n",
+    "            sigma_pts=1, label_type=\"Gaussian\", single_person=True,\n",
+    "            train=False, label_data=Mpii.LABEL_MIX_MAP)\n",
+    "selective = np.load(base_dir + '/experiments/sel.npy')\n",
+    "mpii_train = \n",
+    "preds = np.load(base_dir + \"/checkpoint/mpii/hg_part_S3_B1_3/preds_200.npy\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -137,23 +164,39 @@
     "    img = mpii[index][0]\n",
     "    img = to_numpy(img).transpose(1,2,0) + mpii.mean\n",
     "\n",
-    "    axs[0,0].imshow(img)\n",
-    "    axs[0,0].axis('off')\n",
+    "    timg_total = imresize(np.asscalar(preds)['parts'].numpy()[index, :15].max(0), img.shape[:2])\n",
+    "    timg2_total = imresize(np.asscalar(preds)['parts'].numpy()[index, 15:].max(0), img.shape[:2])\n",
+    "    \n",
+    "    axs.flat[0].imshow(img)\n",
+    "    axs.flat[0].imshow(timg_total, alpha=0.3)\n",
+    "    axs.flat[0].axis('off')\n",
+    "    \n",
+    "    axs.flat[1].imshow(img)\n",
+    "    axs.flat[1].imshow(timg2_total, alpha=0.3)\n",
+    "    axs.flat[1].axis('off')\n",
+    "    \n",
     "    for i in range(0, 15):\n",
-    "        ax = axs.flatten()[(i+1)*2]\n",
-    "        ax_hist = axs.flatten()[(i+1)*2+1]\n",
-    "        timg = imresize(np.asscalar(preds)['parts'].numpy()[index, 0, i], img.shape[:2])\n",
-    "        # print(timg.mean())\n",
-    "        # print(timg.var())\n",
-    "        # timg[timg < 0.9] = 0\n",
+    "        ax = axs.flat[(i+1)*2]\n",
+    "        ax2 = axs.flat[(i+1)*2+1]\n",
+    "        timg = imresize(np.asscalar(preds)['parts'].numpy()[index, i], img.shape[:2])\n",
+    "        timg2 = imresize(np.asscalar(preds)['parts'].numpy()[index, 15 + i], img.shape[:2])\n",
     "        ax.imshow(img)\n",
     "        ax.imshow(timg, alpha=0.3)\n",
     "        ax.axis('off')\n",
-    "        # ax_hist.hist(preds[index, i].ravel(), bins=16)\n",
-    "        # print(preds[index, 0, i].max())\n",
-    "        # ax_hist.axis('off')\n",
+    "        ax2.imshow(img)\n",
+    "        ax2.imshow(timg2, alpha=0.3)\n",
+    "        ax2.axis('off')\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
