Added AssocHourglass; little changes

--- a/experiments/vis.ipynb
+++ b/experiments/vis.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "#%load_ext autoreload\n",
+    "#%autoreload 2\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import sys\n",
     "import pickle\n",
-    "sys.path.insert(0, \"/home/qite/my/pytorch-pose/\")\n",
-    "from pose.datasets import Mpii"
+    "from scipy.misc import imresize\n",
+    "import torch\n",
+    "import imp\n",
+    "from IPython.lib.deepreload import reload"
    ]
   },
   {
@@ -36,6 +38,7 @@
     }
    ],
    "source": [
+    "# wide notebook\n",
     "from IPython.core.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
    ]
@@ -130,42 +133,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = '/home/qite/my/pytorch-pose'\n",
-    "mpii = Mpii(jsonfile=base_dir + '/data/mpii/mpii_annotations.json',\n",
-    "            img_folder=base_dir + '/data/mpii/images',\n",
-    "            meanstd_file=base_dir + '/data/mpii/mean.pth.tar',\n",
-    "            sigma_pts=1, label_type=\"Gaussian\", single_person=True,\n",
-    "            train=False, label_data=Mpii.LABEL_MIX_MAP)\n",
+    "base_dir = '/home/qite/my/pytorch-pose/'\n",
+    "sys.path.insert(0, base_dir)\n",
+    "import pose\n",
+    "# def import_pose(base_dir):\n",
+    "#     module_name = 'pose'\n",
+    "#     fp, pathname, description = imp.find_module(module_name, [base_dir])\n",
+    "\n",
+    "#     try:\n",
+    "#         return imp.load_module(module_name, fp, pathname, description)\n",
+    "#     finally:\n",
+    "#         if fp:\n",
+    "#             fp.close()\n",
+    "# pose = import_pose(base_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mpii = pose.datasets.Mpii(jsonfile=base_dir + '/data/mpii/mpii_annotations.json',\n",
+    "                          img_folder=base_dir + '/data/mpii/images',\n",
+    "                          meanstd_file=base_dir + '/data/mpii/mean.pth.tar',\n",
+    "                          sigma_pts=1, label_type=\"Gaussian\", single_person=True,\n",
+    "                          train=False, label_data=pose.datasets.Mpii.LABEL_POINTS_MAP)\n",
     "selective = np.load(base_dir + '/experiments/sel.npy')\n",
-    "mpii_train = \n",
-    "preds = np.load(base_dir + \"/checkpoint/mpii/hg_part_S3_B1_3/preds_200.npy\")"
+    "preds = np.load(base_dir + \"/checkpoint/mpii/hg_inf_S3_B1_5/preds_200.npy\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "from pose.utils.misc import to_numpy\n",
-    "from scipy.misc import imresize\n",
-    "\n",
+    "# part\n",
     "for index in range(len(mpii)):\n",
     "    print(\"index: {}\".format(index))\n",
     "    fig, axs = plt.subplots(4, 8, figsize=(30, 15), gridspec_kw={'wspace': 0.08, 'hspace': 0.08})\n",
     "    img = mpii[index][0]\n",
-    "    img = to_numpy(img).transpose(1,2,0) + mpii.mean\n",
+    "    img = img.numpy().transpose(1,2,0) + mpii.mean\n",
     "\n",
-    "    timg_total = imresize(np.asscalar(preds)['parts'].numpy()[index, :15].max(0), img.shape[:2])\n",
-    "    timg2_total = imresize(np.asscalar(preds)['parts'].numpy()[index, 15:].max(0), img.shape[:2])\n",
+    "    timg_total = imresize(np.asscalar(preds)['parts'].numpy()[index, :15].max(0), img.shape[:2], mode='F')\n",
+    "    timg2_total = imresize(np.asscalar(preds)['parts'].numpy()[index, 15:].max(0), img.shape[:2], mode='F')\n",
     "    \n",
     "    axs.flat[0].imshow(img)\n",
     "    axs.flat[0].imshow(timg_total, alpha=0.3)\n",
@@ -178,14 +197,308 @@
     "    for i in range(0, 15):\n",
     "        ax = axs.flat[(i+1)*2]\n",
     "        ax2 = axs.flat[(i+1)*2+1]\n",
-    "        timg = imresize(np.asscalar(preds)['parts'].numpy()[index, i], img.shape[:2])\n",
-    "        timg2 = imresize(np.asscalar(preds)['parts'].numpy()[index, 15 + i], img.shape[:2])\n",
+    "        timg = imresize(np.asscalar(preds)['parts'].numpy()[index, i], img.shape[:2], mode='F')\n",
+    "        timg2 = imresize(np.asscalar(preds)['parts'].numpy()[index, 15 + i], img.shape[:2], mode='F')\n",
     "        ax.imshow(img)\n",
     "        ax.imshow(timg, alpha=0.3)\n",
     "        ax.axis('off')\n",
     "        ax2.imshow(img)\n",
     "        ax2.imshow(timg2, alpha=0.3)\n",
     "        ax2.axis('off')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# point\n",
+    "point_preds = np.asscalar(preds).numpy()\n",
+    "for index in range(len(mpii)):\n",
+    "    img, _, meta = mpii[index]\n",
+    "    if meta['index'] >= point_preds.shape[0]:\n",
+    "        # skip\n",
+    "        continue\n",
+    "    \n",
+    "    print(\"index: {}\".format(index))\n",
+    "    fig, axs = plt.subplots(5, 4, figsize=(20, 20), gridspec_kw={'wspace': 0.08, 'hspace': 0.08})\n",
+    "    \n",
+    "    img = img.numpy().transpose(1,2,0) + mpii.mean\n",
+    "\n",
+    "    timg_total = imresize(point_preds[index].max(0), img.shape[:2], mode='F')\n",
+    "    \n",
+    "    axs.flat[0].imshow(img)\n",
+    "    axs.flat[0].imshow(timg_total, alpha=0.7, vmin=0., vmax=1.)\n",
+    "    axs.flat[0].axis('off')\n",
+    "    \n",
+    "    for i in range(1, axs.size):\n",
+    "        ax = axs.flat[i]\n",
+    "        ax.axis('off')\n",
+    "        if i > point_preds.shape[1]:\n",
+    "            continue\n",
+    "        timg = imresize(point_preds[index, i-1], img.shape[:2], mode='F')\n",
+    "        ax.imshow(img)\n",
+    "        mappable = ax.imshow(timg, alpha=0.7)\n",
+    "        fig.colorbar(mappable, ax=ax)\n",
+    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = pose.models.PathHourglassNet(pose.models.Bottleneck, \n",
+    "                                num_stacks=3,\n",
+    "                                num_blocks=1,\n",
+    "                                num_classes=16)\n",
+    "\n",
+    "model = torch.nn.DataParallel(model).cuda()\n",
+    "checkpoint = torch.load(base_dir + \"/checkpoint/mpii/hg_path_S3_B1_2/checkpoint_180.pth.tar\")\n",
+    "model.load_state_dict(checkpoint['state_dict'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def my_forward(self, x):\n",
+    "    self = model.module\n",
+    "    out = []\n",
+    "    x = self.conv1(x)\n",
+    "    x = self.bn1(x)\n",
+    "    x = self.relu(x) \n",
+    "\n",
+    "    x = self.layer1(x)  \n",
+    "    x = self.maxpool(x)\n",
+    "    x = self.layer2(x)  \n",
+    "    x = self.layer3(x)  \n",
+    "\n",
+    "    start_x = x\n",
+    "\n",
+    "    for i in range(self.num_stacks):\n",
+    "        cur_classes = self.num_classes if type(self.num_classes) is int else self.num_classes[i]\n",
+    "\n",
+    "        y = self.hg[i](x)\n",
+    "        y = self.res[i](y)\n",
+    "        y = self.fc[i](y)\n",
+    "        score = self.score[i](y)\n",
+    "        out.append(score)\n",
+    "        if i < self.num_stacks-1:\n",
+    "            score_eh = self._enhance_score(score, i)\n",
+    "            start_ = self.start_res[i](start_x)\n",
+    "            score_ = self.score_res[i](self.score_[i](score_eh))\n",
+    "            # x = x + fc_ + score_\n",
+    "            x = start_ + score_\n",
+    "\n",
+    "    return out\n",
+    "\n",
+    "model.module.forward = my_forward\n",
+    "for index in range(50):\n",
+    "    print(\"index: {}\".format(index))\n",
+    "    img, target, meta = mpii[index]\n",
+    "    input_var = torch.autograd.Variable(img.unsqueeze(0).cuda(), volatile=True)\n",
+    "    output = model.module(input_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index: 0\n",
+      "index: 1\n",
+      "index: 2\n",
+      "index: 3\n",
+      "index: 4\n",
+      "index: 5\n",
+      "index: 6\n",
+      "index: 7\n",
+      "index: 8\n",
+      "index: 9\n",
+      "index: 10\n",
+      "index: 11\n",
+      "index: 12\n",
+      "index: 13\n",
+      "index: 14\n",
+      "index: 15\n",
+      "index: 16\n",
+      "index: 17\n",
+      "index: 18\n",
+      "index: 19\n",
+      "index: 20\n",
+      "index: 21\n",
+      "index: 22\n",
+      "index: 23\n",
+      "index: 24\n",
+      "index: 25\n",
+      "index: 26\n",
+      "index: 27\n",
+      "index: 28\n",
+      "index: 29\n",
+      "index: 30\n",
+      "index: 31\n",
+      "index: 32\n",
+      "index: 33\n",
+      "index: 34\n",
+      "index: 35\n",
+      "index: 36\n",
+      "index: 37\n",
+      "index: 38\n",
+      "index: 39\n",
+      "index: 40\n",
+      "index: 41\n",
+      "index: 42\n",
+      "index: 43\n",
+      "index: 44\n",
+      "index: 45\n",
+      "index: 46\n",
+      "index: 47\n",
+      "index: 48\n",
+      "index: 49\n",
+      "[[-0.11124076 -0.04717415 -0.00180089]\n",
+      " [-0.1602158  -0.00073604  0.00699198]]\n",
+      "[[ 0.20474082  0.02721088  0.01954039]\n",
+      " [ 0.25497905  0.01513646  0.02260493]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "layer_mean = np.zeros((2, 3))\n",
+    "layer_var = np.zeros((2, 3))\n",
+    "layer_count = 0\n",
+    "def my_forward(x):\n",
+    "    global layer_mean\n",
+    "    global layer_var\n",
+    "    global layer_count\n",
+    "    self = model.module\n",
+    "    out = []\n",
+    "    x = self.conv1(x)\n",
+    "    x = self.bn1(x)\n",
+    "    x = self.relu(x) \n",
+    "\n",
+    "    x = self.layer1(x)  \n",
+    "    x = self.maxpool(x)\n",
+    "    x = self.layer2(x)  \n",
+    "    x = self.layer3(x)  \n",
+    "\n",
+    "    for i in range(self.num_stacks):\n",
+    "        #cur_classes = self.num_classes if type(self.num_classes) is int else self.num_classes[i]\n",
+    "\n",
+    "        y = self.hg[i](x)\n",
+    "        y = self.res[i](y)\n",
+    "        y = self.fc[i](y)\n",
+    "        score = self.score[i](y)\n",
+    "        out.append(score)\n",
+    "        if i < self.num_stacks-1:\n",
+    "            # score_eh = self._enhance_score(score, i)\n",
+    "            fc_ = self.fc_[i](y)\n",
+    "            score_ = self.score_[i](score)\n",
+    "            cur_mean = np.array([x.mean().data.cpu().numpy()[0], fc_.mean().data.cpu().numpy()[0], score_.mean().data.cpu().numpy()[0]])\n",
+    "            cur_var = np.array([x.var().data.cpu().numpy()[0], fc_.var().data.cpu().numpy()[0], score_.var().data.cpu().numpy()[0]])\n",
+    "            layer_mean[i] = ((layer_mean[i] * layer_count) + cur_mean) / (layer_count + 1)\n",
+    "            layer_var[i] = ((layer_var[i] * layer_count) + cur_var) / (layer_count + 1)\n",
+    "            x = x + fc_ + score_\n",
+    "    layer_count += 1\n",
+    "\n",
+    "    return out\n",
+    "\n",
+    "model.module.forward = my_forward\n",
+    "for index in range(50):\n",
+    "    print(\"index: {}\".format(index))\n",
+    "    img, target, meta = mpii[index]\n",
+    "    input_var = torch.autograd.Variable(img.unsqueeze(0).cuda(), volatile=True)\n",
+    "    output = model.module(input_var)\n",
+    "print(layer_mean)\n",
+    "print(layer_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "remain_model = False\n",
+    "for index in range(len(mpii)):\n",
+    "    print(\"index: {}\".format(index))\n",
+    "    img, target, meta = mpii[index]\n",
+    "    input_var = torch.autograd.Variable(img.unsqueeze(0).cuda(), volatile=True)\n",
+    "    output = model(input_var)\n",
+    "    \n",
+    "    fig, axs = plt.subplots(16, 8, figsize=(40, 60), gridspec_kw={'wspace': 0.08, 'hspace': 0.08})\n",
+    "\n",
+    "    img_show = imresize(img.numpy().transpose(1,2,0) + mpii.mean, (64, 64))\n",
+    "    map_acc = np.zeros((16, 64, 64))\n",
+    "    mask_acc = np.zeros((16, 64, 64))\n",
+    "    \n",
+    "    if remain_model:\n",
+    "        remain = np.ones((16, 64, 64))\n",
+    "    \n",
+    "    for j in range(len(output)):\n",
+    "        output_cur_cpu = output[j].data.cpu()[0].numpy()\n",
+    "        output_map = output_cur_cpu[:16]\n",
+    "        if not remain_model or j < len(output) - 1:\n",
+    "            output_mask = output_cur_cpu[16:]\n",
+    "        else:\n",
+    "            output_mask = None\n",
+    "        \n",
+    "        for c in range(16):\n",
+    "            map_ax = axs[c, 2+j*2]\n",
+    "            mask_ax = axs[c, 2+j*2+1]\n",
+    "            \n",
+    "            map_data = output_map[c]\n",
+    "            if remain_model:\n",
+    "                if output_mask is not None:\n",
+    "                    mask_data = remain[c] * output_mask[c]\n",
+    "                else:\n",
+    "                    mask_data = remain[c].copy()\n",
+    "                remain[c] -= mask_data\n",
+    "            else:\n",
+    "                mask_data = output_mask[c]\n",
+    "            \n",
+    "            mask_acc[c] += mask_data\n",
+    "            map_acc[c] += map_data * mask_data\n",
+    "            \n",
+    "            map_ax.axis('off')\n",
+    "            map_ax.imshow(img_show)\n",
+    "            map_cb = map_ax.imshow(map_data, alpha=0.7)\n",
+    "            fig.colorbar(map_cb, ax=map_ax)\n",
+    "            \n",
+    "            mask_ax.axis('off')\n",
+    "            if mask_data is not None:\n",
+    "                mask_ax.imshow(img_show)\n",
+    "                mask_cb = mask_ax.imshow(mask_data, alpha=0.7)\n",
+    "                fig.colorbar(mask_cb, ax=mask_ax)\n",
+    "\n",
+    "    for c in range(16):\n",
+    "        map_acc_ax = axs[c, 0]\n",
+    "        mask_acc_ax = axs[c, 1]\n",
+    "        \n",
+    "        map_acc_ax.axis('off')\n",
+    "        map_acc_ax.imshow(img_show)\n",
+    "        map_acc_cb = map_acc_ax.imshow(map_acc[c], alpha=0.7)\n",
+    "        fig.colorbar(map_acc_cb, ax=map_acc_ax)\n",
+    "        \n",
+    "        mask_acc_ax.axis('off')\n",
+    "        mask_acc_cb = mask_acc_ax.imshow(mask_acc[c])\n",
+    "        fig.colorbar(mask_acc_cb, ax=mask_acc_ax)\n",
     "    plt.show()"
    ]
   },
